# C-GUI

./: .editorconfig  .gitignore  Bevy GUI.c  Bevy GUI.vcxproj  Bevy GUI.vcxproj.filters  C-GUI.sln  C-GUI.vcxproj  C-GUI.vcxproj.filters  Cargo.toml  LICENSE  README.md  build.rs  coding_style.md  main.cpp  main.odin  run.cmd  types.h
GLMLib/: GLMLib.sln  ReadMe.txt  gldebug.f90  glmath.f90  glmlib.vfproj  unit_test.f90  unit_test.vfproj
back-end/: Cargo.toml
back-end/src/: main.rs  sdl2_types.rs  types.rs
cgui/: cvector_impl.hpp  engine.hpp  memmgr.hpp
cgui/shaders/: pyramid.vert  rdrect.blend  rdrect.frag
ctui/: CMakeLists.txt  build.bat  check.cppcheck  clang analyze.bat  format.bat  main.c
ctui/src/: glmath.h  gltypes.h  timer.h  types.h
ctui/src/gllib/: glmath.c  glmath.h  gltypes.c  gltypes.h  import.h
ctui/src/shaders/: rdrect.frag  rdrect.vert
editor/: main.py
engine/: cvector_impl.hpp  engine.cpp  engine.hpp  hash map.py  lsd radix sort.py  memmgr.hpp  rgb.cpp  rgb.hpp  shader_compiler.cpp  shader_compiler.hpp  shader_controller.cpp  shader_controller.hpp  shader_ctrl.cpp  shader_ctrl.hpp  types.hpp
engine/shaders/: image.frag  image.vert  pyramid.frag  pyramid.vert  rdrect.frag  rdrect.vert  shader.vert
front-end/: Bevy GUI.c  Bevy GUI.cpp  Bevy GUI.sln  Bevy GUI.vcxproj  Bevy GUI.vcxproj.filters  types.h  types.hpp
prototype/: prototype.cpp  shader.frag  shader.vert  shader_class.cpp  shader_class.hpp  shader_compiler.cpp  shader_compiler.hpp  tmp.sln  tmp.vcxproj  tmp.vcxproj.filters
prototype/engine/: rgb.cpp  rgb.hpp  shader_compiler.cpp
prototype/lib/: glfw3r.lib
prototype/shader/: image.frag  image.vert
shader/: image.vert  shader.frag  shader.vert
src/: alloc.rs  calloc.rs  compile_shader.bat  glmlib.f90  glmlib.rs  gui_loop.rs  main.odin  main.rs  proc.odin  prototype.cpp  scene2.odin  types.odin  unit_test.rs  vecalloc.rs
src/engine/: types.rs
src/raylib/: raylib.odin
src/res/: shader.vert
(+5 files in other folders)
