[package]
name = "bevy-py-gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
string-join = "0.1.2"

[dependencies.sdl2]
# https://github.com/libsdl-org/SDL/releases/download/release-2.28.1/SDL2-devel-2.28.1-VC.zip
# get the "SDL2.dll" and "SDL2.lib" and place in the root.
version = "0.35"
# https://github.com/libsdl-org/SDL_ttf/releases/download/release-2.20.2/SDL2_ttf-devel-2.20.2-VC.zip
# get the "SDL2_ttf.dll" and "SDL2_ttf.lib" and place in the root.
features = ["ttf"]
